tests/negative/resource_builtin_bad_arity_create.ora
resource TokenUnit = u256;

contract BadCreateArity {
    storage var balances: map<address, Resource<TokenUnit>>;

    pub fn bad(to: address) {
        @create(balances[to]);
    }
}
